<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_set_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_atualizacoes"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/atualizacoes_button" />
        <item
            android:id="@+id/nav_cronograma"
            android:icon="@drawable/ic_menu_cronograma"
            android:title="@string/cronograma_button" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/redes_sociais_button"/>
        <item
            android:id="@+id/nav_pessoas"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/pessoas_button" />
        <item
            android:id="@+id/nav_minhasAtividades"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/favoritos_button" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/mapa_button" />
        <item
            android:id="@+id/nav_areaParticipante"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/area_participante_button" />
    </group>

    <group
        android:id="@+id/menu_set_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patrocinadores"
            android:icon="@drawable/ic_menu_patrocinador"
            android:title="@string/patrocinio_button" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_sobre"
            android:title="@string/sobre_button" />
    </group>

    <group
        android:id="@+id/menu_set_3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/configuracoes_button"/>
    </group>

</menu>
